--- a/index.html
+++ b/index.html
@@ -5,16 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
         <title>Landing</title>
-        <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="vendors/linericon/style.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
-        <link rel="stylesheet" href="vendors/lightbox/simpleLightbox.css">
-        <link rel="stylesheet" href="vendors/nice-select/css/nice-select.css">
         <link rel="stylesheet" href="vendors/animate-css/animate.css">
         <link rel="stylesheet" href="vendors/swiper/css/swiper.min.css">
-        <!-- main css -->
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
     </head>
@@ -22,14 +16,15 @@
     <section class="home_banner_area">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="img/slider/slider-1.jpg" alt="">
+                <div class="swiper-slide">
+                    <img src="img/slider/slider1.jpg" alt="">
                     <div class="slider_text_inner">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-7">
                                     <div class="slider_text">
                                         <h2>BIENVENIDOS</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                        <p>Espacio creado para el manejo y colaboracion de proyectos de grado en la Facultad de Ingenieria de la Universidad Libre</p>
                                         <a class="banner_btn" href="#">Ingresar</a>
                                     </div>
                                 </div>
@@ -37,32 +32,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide"><img src="img/slider/slider-1.jpg" alt="">
+                <div class="swiper-slide">
+                    <img src="img/slider/slider1.jpg" alt="">
                     <div class="slider_text_inner">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-7">
                                     <div class="slider_text">
-                                        <h2>We Combine <br />Business with Finance</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                        <a class="banner_btn" href="#">Explore Us</a>
-                                        <a class="banner_btn2" href="#">Get Free Quote</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide"><img src="img/slider/slider-1.jpg" alt="">
-                    <div class="slider_text_inner">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-7">
-                                    <div class="slider_text">
-                                        <h2>We Combine <br />Business with Finance</h2>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                        <a class="banner_btn" href="#">Explore Us</a>
-                                        <a class="banner_btn2" href="#">Get Free Quote</a>
+                                        <h2>BIENVENIDOS</h2>
+                                        <p>Para comenzar con le proceso el estudiante debera haber cursado minimo el 60% de su pensum</p>
+                                        <a class="banner_btn" href="#">Ingresar</a>
                                     </div>
                                 </div>
                             </div>
@@ -77,15 +56,14 @@
 <script src="js/popper.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/stellar.js"></script>
+
 <script src="vendors/lightbox/simpleLightbox.min.js"></script>
 <script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
 <script src="vendors/isotope/imagesloaded.pkgd.min.js"></script>
 <script src="vendors/isotope/isotope-min.js"></script>
 <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
-<script src="js/jquery.ajaxchimp.min.js"></script>
 <script src="vendors/counter-up/jquery.waypoints.min.js"></script>
 <script src="vendors/counter-up/jquery.counterup.js"></script>
-<script src="js/mail-script.js"></script>
 <script src="vendors/popup/jquery.magnific-popup.min.js"></script>
 <script src="vendors/swiper/js/swiper.min.js"></script>
 <script src="js/theme.js"></script>
